--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==4.2.7
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
-psycopg2-binary==2.9.7
+psycopg[binary]
 redis==4.6.0
 python-decouple==3.8
 drf-yasg==1.21.5
@@ -11,4 +11,5 @@ requests==2.31.0
 django-filter==23.3
 setuptools>=68.0.0
 dj_database_url
+
 
