--- a/.env
+++ b/.env
@@ -1,11 +1,7 @@
 # .env
 DEBUG=True
 SECRET_KEY=your-super-secret-key-here
-DB_NAME=user_service
-DB_USER=postgres
-DB_PASSWORD=password
-DB_HOST=localhost
-DB_PORT=5432
+DATABASE_URL=postgresql://postgres:GwPBXTIwaWXQKNhaJwkHRsqtSQiSpCBx@postgres.railway.internal:5432/railway
 REDIS_URL=redis://localhost:6379/0
 JWT_SECRET_KEY=your-jwt-secret-key-here
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
