--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ DATABASE_URL=postgresql://postgres:GwPBXTIwaWXQKNhaJwkHRsqtSQiSpCBx@postgres.rai
 REDIS_URL=redis://localhost:6379/0
 JWT_SECRET_KEY=your-jwt-secret-key-here
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+PGPASSWORD=GwPBXTIwaWXQKNhaJwkHRsqtSQiSpCBx
+PGPORT=5432
+PGUSER=postgres
+PGDATA=/var/lib/postgresql/data/pgdata
+PGDATABASE=railway
+PGHOST=postgres.railway.internal
