--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # .env
 DEBUG=True
 SECRET_KEY=your-super-secret-key-here
-REDIS_URL=redis://localhost:6379/0
+REDIS_URL=redis://default:uFZbxXRbpDbHSpbYhZUPymisvMGEXjEp@redis.railway.internal:6379
 JWT_SECRET_KEY=your-jwt-secret-key-here
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
